# rgc

./: Cargo.toml  README.md
src/: gemini.rs  main.rs  ui.rs
