[package]
name = "rgc"
version = "0.1.0"
authors = ["olson-dan <olson-dan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-std = { version="1.9.0", features=["attributes"] }
async-native-tls = "0.3.3"
egui = "0.12.0"
eframe = "0.12.0"
urlparse = "0.7.3"
url-escape = "0.1.0"
